jaeger-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger-app-2
  name: jaeger-app-2
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-app-2
  template:
    metadata:
      labels:
        app: jaeger-app-2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5555"
    spec:
      containers:
      - image: czdev/jaeger-app-flask-metrics-child
        imagePullPolicy: Always
        name: jaeger-app-2-flask
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger-app-2
  name: jaeger-app-2-srv
  namespace: observability
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
    nodePort: 30002
  selector:
    app: jaeger-app-2
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger-app-2
  name: jaeger-app-2-srv-2
  namespace: observability
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: jaeger-app-2
