jaeger-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger-app
  name: jaeger-app
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-app
  template:
    metadata:
      labels:
        app: jaeger-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "5555"
    spec:
      containers:
      - image: czdev/jaeger-app-flask-metrics
        imagePullPolicy: Always
        name: jaeger-app-flask
      - name: sidecar-debug
        image: busybox:1.28
        command: ['sh', '-c', 'echo `cat /app/index.py`']
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger-app
  name: jaeger-app-srv
  namespace: observability
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
    nodePort: 30001
  selector:
    app: jaeger-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jaeger-app
  name: jaeger-app-srv-2
  namespace: observability
spec:
  ports:
  - port: 5555
    protocol: TCP
    targetPort: 5555
  selector:
    app: jaeger-app
  type: ClusterIP
