jaeger-public-2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: jaeger
    meta.helm.sh/release-namespace: observability
  labels:
    app.kubernetes.io/component: query
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/version: 1.18.0
    helm.sh/chart: jaeger-0.34.0
  name: jaeger-query-public
  namespace: observability
spec:
  ports:
  - name: query
    port: 80
    protocol: TCP
    targetPort: query
  - name: admin
    port: 16687
    protocol: TCP
    targetPort: admin
    nodePort: 30666
  selector:
    app.kubernetes.io/component: query
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  sessionAffinity: None
  type: NodePort
