ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
#    kubernetes.io/ingress.class: gloo
#    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: contour
  name: jaeger-public
  namespace: observability
spec:
  rules:
    - host: domain.xyz
      http:
        paths:
          - backend:
              serviceName: simplest-query
              servicePort: 16686
            path: /.*
